# GDGoC_spring_hack

./: 0318_contents.md  demo_script.md  dev.sh  google_tech_research.md  judge.md  pipeline_diagram.md  riasapo_design.md  scenario_definitions.md  ui_mock_prompts.md  workflow_diagram_prompt.md
.kiro/specs/riasapo-learning-support/: design.md  parallel-execution-plan.md  requirements.md  research.md  spec.json  tasks.md
archive/: brainstorm.md  brainstorm_additions.md  prodact_with_clade.md  share_team.md  theme.md
backend/: .env  main.py  pyproject.toml
backend/data/scenarios/: index.json
backend/src/: main.py
backend/src/models/: schemas.py
backend/src/services/: llm.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/app/: globals.css
frontend/src/components/: CodePanel.tsx  ConceptNode.tsx  ConceptQA.tsx  Header.tsx  LevelSelector.tsx  ScenarioCard.tsx
frontend/src/data/: experience-levels.json
frontend/src/lib/: gemini-client.ts
frontend/src/types/: index.ts
riasapo/: .dockerignore  .gcloudignore  Dockerfile  cloud-run-service.yaml  cloudbuild.yaml  firestore.rules  package-lock.json  package.json
riasapo/src/__tests__/: embedding-service.test.ts  gemini-client.test.ts  logger.test.ts
riasapo/src/app/: layout.tsx
riasapo/src/components/: AnswerPanel.tsx  AuthButton.tsx  AuthProvider.tsx  CodeExecutionPanel.tsx  CodePanel.tsx  ConceptQA.tsx  Header.tsx  InfographicRoadmap.tsx  LevelSelector.tsx  PreviewSandbox.tsx  Providers.tsx  RoadmapGraph.tsx  SessionSyncProvider.tsx  StepIndicator.tsx  (+1 more)
(+43 files in other folders)
